--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@mdi/js": "^6.6.96",
+    "@milahu/patch-package": "^6.4.11",
     "highlight.js": "^11.5.1",
     "open": "^8.4.0",
-    "patch-package": "^6.4.7",
     "prettier": "^2.6.2"
   },
   "devDependencies": {
@@ -30,8 +30,8 @@
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-prettier": "^2.2.2",
     "rollup-plugin-sizes": "^1.0.4",
-    "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-userscript-metablock": "^0.3.1",
+    "rollup-plugin-string": "3.0.0",
+    "rollup-plugin-userscript-metablock": "0.3.1",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4"
   },
