--- a/package.json
+++ b/package.json
@@ -9,23 +9,27 @@
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c --watch",
-    "open": "node ./scripts/open-userscript.js",
+    "open": "ts-node --skipProject scripts/open-userscript.ts",
     "format": "prettier --write {**/*,*}.{js,ts,jsx,tsx,yaml,css,json}",
     "format:check": "prettier --check {**/*,*}.{js,ts,jsx,tsx,yaml,css,json}",
+    "update:readme": "ts-node --skipProject scripts/update-readme.ts",
     "postinstall": "patch-package"
   },
   "dependencies": {
     "@mdi/js": "^6.6.96",
     "@milahu/patch-package": "^6.4.11",
     "highlight.js": "^11.5.1",
+    "js-yaml": "^4.1.0",
     "open": "^8.4.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/glob": "^7.2.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.11.32",
     "@types/tampermonkey": "^4.0.5",
     "glob": "^8.0.1",
