--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "open": "ts-node --skipProject scripts/open-userscript.ts",
     "format": "prettier --write {**/*,*}.{js,ts,jsx,tsx,yaml,css,json}",
     "format:check": "prettier --check {**/*,*}.{js,ts,jsx,tsx,yaml,css,json}",
-    "update:readme": "ts-node --skipProject scripts/update-readme.ts",
-    "postinstall": "patch-package"
+    "update:readme": "ts-node --skipProject scripts/update-readme.ts"
   },
   "dependencies": {
     "@mdi/js": "^6.6.96",
-    "@milahu/patch-package": "^6.4.11",
     "highlight.js": "^11.5.1",
     "js-yaml": "^4.1.0",
     "open": "^8.4.0",
@@ -26,11 +24,11 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/glob": "^7.2.0",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^16.11.32",
+    "@types/node": "^16.11.33",
     "@types/tampermonkey": "^4.0.5",
     "glob": "^8.0.1",
     "rollup": "^2.71.1",
@@ -42,8 +40,14 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4"
   },
-  "packageManager": "pnpm@6.32.11",
+  "packageManager": "pnpm@7.6.0",
   "engines": {
     "node": "16.x"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "rollup-plugin-string@3.0.0": "patches/rollup-plugin-string@3.0.0.patch",
+      "rollup-plugin-userscript-metablock@0.3.1": "patches/rollup-plugin-userscript-metablock@0.3.1.patch"
+    }
   }
 }
