--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "open": "ts-node --skipProject scripts/open-userscript.ts",
     "format": "prettier --write {**/*,*}.{js,ts,jsx,tsx,yaml,css,json}",
     "format:check": "prettier --check {**/*,*}.{js,ts,jsx,tsx,yaml,css,json}",
-    "update:readme": "ts-node --skipProject scripts/update-readme.ts"
+    "update:readme": "md-template table -p userscripts"
   },
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "highlight.js": "^11.6.0",
-    "js-yaml": "^4.1.0",
     "open": "^8.4.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1"
@@ -27,7 +26,6 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "@types/glob": "^7.2.0",
-    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.11.45",
     "@types/tampermonkey": "^4.0.5",
     "glob": "^8.0.3",
