--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "rollup -c",
     "watch": "rollup -c --watch",
     "open": "ts-node --skipProject scripts/open-userscript.ts",
+    "lint": "eslint . --ext .js,.ts,.d.ts --max-warnings=0",
+    "lint:fix": "npm run lint -s -- --fix",
     "format": "prettier --write {**/*,*}.{js,ts,jsx,tsx,yaml,css,json}",
     "format:check": "prettier --check {**/*,*}.{js,ts,jsx,tsx,yaml,css,json}",
     "update:readme": "md-template table -p userscripts"
@@ -28,6 +30,11 @@
     "@types/glob": "^7.2.0",
     "@types/node": "^16.11.45",
     "@types/tampermonkey": "^4.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-only-warn": "^1.0.3",
     "glob": "^8.0.3",
     "rollup": "^2.77.0",
     "rollup-plugin-bundle-size": "^1.0.3",
@@ -38,7 +45,7 @@
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
-  "packageManager": "pnpm@7.6.0",
+  "packageManager": "pnpm@7.9.0",
   "engines": {
     "node": "16.x"
   },
