--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
-  "packageManager": "pnpm@7.9.0",
+  "packageManager": "pnpm@8.5.1",
   "engines": {
-    "node": "16.x"
+    "node": "^18"
   },
   "pnpm": {
     "patchedDependencies": {
