--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "update:readme": "md-template table -p userscripts"
   },
   "dependencies": {
-    "@mdi/js": "^7.0.96",
-    "highlight.js": "^11.6.0",
-    "open": "^8.4.0",
+    "@mdi/js": "7.2.96",
+    "highlight.js": "11.8.0",
+    "open": "9.1.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.45",
-    "@types/tampermonkey": "^4.0.5",
+    "@types/node": "18.16.12",
+    "@types/tampermonkey": "4.0.10",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-only-warn": "^1.0.3",
     "rollup-plugin-userscript-metablock": "0.3.1",
-    "typescript": "^4.7.4",
+    "typescript": "5.0.4",
     "vite": "4.3.7"
   },
   "packageManager": "pnpm@8.5.1",
