feat: update eslint and typescript config

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "vite build",
     "watch": "vite build --watch",
     "open": "ts-node --skipProject scripts/open-userscript.ts",
+    "typecheck": "tsc",
     "lint": "eslint . --cache --max-warnings=0 --ext js,cjs,mjs,jsx,ts,tsx",
     "lint:fix": "pnpm run lint --fix",
     "format": "prettier --cache --write .",
@@ -27,11 +28,14 @@
   "devDependencies": {
     "@types/node": "18.16.12",
     "@types/tampermonkey": "4.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.21.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-only-warn": "^1.0.3",
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "@typescript-eslint/parser": "5.59.6",
+    "eslint": "8.40.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-only-warn": "1.1.0",
+    "eslint-plugin-prettier": "4.2.1",
     "rollup-plugin-userscript-metablock": "0.3.1",
     "typescript": "5.0.4",
     "vite": "4.3.7"
