--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/jcwillox/userscripts"
   },
   "scripts": {
+    "prepare": "husky install",
     "build": "vite build",
     "watch": "vite build --watch",
     "open": "ts-node --skipProject scripts/open-userscript.ts",
@@ -18,11 +19,14 @@
     "format:check": "prettier --cache --check .",
     "update:readme": "md-template table -p userscripts"
   },
+  "lint-staged": {
+    "*.{js,cjs,mjs,jsx,ts,tsx}": "eslint --cache --max-warnings=0 --fix",
+    "*.!(js|cjs|mjs|jsx|ts|tsx)": "prettier --ignore-unknown --cache --write"
+  },
   "dependencies": {
     "@mdi/js": "7.2.96",
     "highlight.js": "11.8.0",
     "open": "9.1.0",
-    "prettier": "2.8.8",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -36,6 +40,9 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-only-warn": "1.1.0",
     "eslint-plugin-prettier": "4.2.1",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.2",
+    "prettier": "2.8.8",
     "rollup-plugin-userscript-metablock": "0.3.1",
     "typescript": "5.0.4",
     "vite": "4.3.7"
