--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "userscripts",
   "author": "jcwillox",
   "license": "MIT",
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/jcwillox/userscripts"
@@ -11,7 +10,7 @@
     "prepare": "husky install",
     "build": "vite build",
     "watch": "vite build --watch",
-    "open": "ts-node --skipProject scripts/open-userscript.ts",
+    "open": "tsx scripts/open-userscript.ts",
     "typecheck": "tsc",
     "lint": "eslint . --cache --max-warnings=0 --ext js,cjs,mjs,jsx,ts,tsx",
     "lint:fix": "pnpm run lint --fix",
@@ -26,8 +25,7 @@
   "dependencies": {
     "@mdi/js": "7.2.96",
     "highlight.js": "11.8.0",
-    "open": "9.1.0",
-    "ts-node": "^10.9.1"
+    "open": "9.1.0"
   },
   "devDependencies": {
     "@types/node": "18.16.12",
@@ -44,6 +42,7 @@
     "lint-staged": "13.2.2",
     "prettier": "2.8.8",
     "rollup-plugin-userscript-metablock": "0.3.1",
+    "tsx": "3.12.7",
     "typescript": "5.0.4",
     "vite": "4.3.7"
   },
