--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rollup-plugin-userscript-metablock": "0.3.1",
     "tsx": "3.12.7",
     "typescript": "5.0.4",
+    "unocss": "0.52.3",
     "vite": "4.3.7"
   },
   "packageManager": "pnpm@8.5.1",
