--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "2.8.8",
     "rollup-plugin-userscript-metablock": "0.3.1",
     "tsx": "3.12.7",
+    "typed-query-selector": "^2.10.1",
     "typescript": "5.0.4",
     "unocss": "0.52.4",
     "vite": "4.3.9"
