--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,10 +6,5 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
   },
-  "include": [
-    "vite.config.ts",
-    "uno.config.ts",
-    "package.json",
-    "src/metadata.ts"
-  ]
+  "include": ["vite.config.ts", "package.json", "src/metadata.ts"]
 }
