--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "concurrently": "9.2.0",
     "glob": "11.0.3",
     "highlight.js": "11.11.1",
-    "open": "10.2.0"
+    "open": "10.2.0",
+    "pretty-ms": "9.2.0"
   },
   "devDependencies": {
     "@types/node": "22.13.14",
