--- a/src/userscripts/node-alias-npm/meta.yaml
+++ b/src/userscripts/node-alias-npm/meta.yaml
@@ -7,3 +7,6 @@ run-at: document-start
 grant:
   - GM_addStyle
   - GM_setClipboard
+  - GM_registerMenuCommand
+  - GM_unregisterMenuCommand
+  - window.onurlchange
