--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "scripts", "uno.config.ts"],
+  "include": ["src", "testing", "scripts", "uno.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
